--- a/index.html
+++ b/index.html
@@ -1,18 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-    <!-- HEADER -->
-    <header></header>
-    <!-- MAIN -->
-    <main></main>
-    <!-- FOOTER -->
-    <footer></footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Zoom</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <div class="container-flex">
+      <!-- HEADER -->
+      <header>
+        <div class="lens"><i class="fas fa-th"></i> speaker view</div>
+          <div class="lens"><i class="fas fa-expand-arrows-alt"></i></div>
+      </header>
+      <!-- MAIN -->
+      <main>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+      </main>
+      <!-- FOOTER -->
+      <footer>
+          <div class="usefull">
+
+            
+          </div>
+          <div class="options"></div>
+          <div class="end"></div>
+      </footer>
+    </div>
+  </body>
 </html>
