--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- HEADER -->
       <header>
         <div class="lens"><i class="fas fa-th"></i> speaker view</div>
-          <div class="lens"><i class="fas fa-expand-arrows-alt"></i></div>
+        <div class="lens"><i class="fas fa-expand-arrows-alt"></i></div>
       </header>
       <!-- MAIN -->
       <main>
@@ -27,15 +27,264 @@
             <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
           </div>
         </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="user-name">
+            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+          </div>
+        </div>
       </main>
       <!-- FOOTER -->
       <footer>
-          <div class="usefull">
-
-            
+        <div class="usefull">
+          <div class="col"><i class="fas fa-microphone"></i>Mute</div>
+          <i class="fas fa-chevron-up"></i>
+          <div class="col"><i class="fas fa-video"></i>Stop Video</div>
+          <i class="fas fa-chevron-up"></i>
+        </div>
+        <div class="options">
+          <div class="col"><i class="fas fa-user-plus"></i>Invite</div>
+          <div class="col">
+            <i class="fas fa-user-friends"></i>Manage Partecipants
           </div>
-          <div class="options"></div>
-          <div class="end"></div>
+          <div class="col"><i class="fas fa-chart-bar"></i>Polling</div>
+          <div class="col"><i class="fas fa-share-square"></i>Share Screen</div>
+          <i class="fas fa-chevron-up"></i>
+          <div class="col"><i class="fas fa-comment"></i>Chat</div>
+          <div class="col"><i class="fas fa-record-vinyl"></i>Record</div>
+          <div class="col"><i class="fas fa-th-large"></i>Breackout Rooms</div>
+          <div class="col"><i class="fas fa-ellipsis-h"></i>More</div>
+        </div>
+        <div class="end">End Meeting</div>
       </footer>
     </div>
   </body>
