--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <main>
         <div class="box">
           <div class="user-name">
-            <span><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+            <span><i class="fas fa-microphone-slash"></i> Alexx</span>
           </div>
         </div>
         <div class="box">
