--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
           <div class="col"><i class="fas fa-video"></i>Stop Video</div>
           <i class="fas fa-chevron-up"></i>
         </div>
-        <div class="options">
+        <div class="options collapse">
           <div class="col"><i class="fas fa-user-plus"></i>Invite</div>
           <div class="col">
             <i class="fas fa-user-friends"></i>Manage Partecipants
